<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_mm_song"
            android:title="@string/list_song" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_album_white"
            android:title="@string/album_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_artist"
            android:title="@string/artist_list" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_vip"
            android:title="@string/about" />
    </group>


</menu>
