<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iceman.mp3player.activities.DetailActivity">

    <LinearLayout
        android:id="@+id/ll_title_detail"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_song_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/list_song"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_album_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/album_list"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_artist_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/artist_list"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_below="@id/ll_title_detail"></android.support.v4.view.ViewPager>
</RelativeLayout>
